--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  background-color: black;
+  color: white;
 }
 
 .headerContainer {
@@ -13,6 +15,9 @@
 .submit {
   width: 50%;
   margin: 5px;
+  border: 1px solid white;
+  background-color: black;
+  color: white;
 }
 
 .headerInnerContainer {
@@ -26,10 +31,15 @@
   display: flex;
   margin-bottom: 16px;
   margin-right: 10px;
+  background-color: black;
+  color: white;
 }
 
 .input {
   margin-left: 5px;
+  border: 1px solid white;
+  background-color: black;
+  color: white;
 }
 
 .boardContainer {
@@ -37,6 +47,7 @@
   flex: 1;
   justify-content: center;
   padding: 0 60px;
+  background-color: black;
 }
 
 .headerButtons {
@@ -50,13 +61,14 @@
   display: flex;
   padding: 10px;
   margin: 1px;
-  border: 1px solid black;
+  border: 1px solid white;
+  background-color: black;
 }
 
 .cellContainerLive {
   display: flex;
   padding: 10px;
   margin: 1px;
-  border: 1px solid black;
-  background-color: black;
+  border: 1px solid white;
+  background-color: white;
 }
