--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -10,6 +10,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 .submit {
@@ -23,7 +25,7 @@
 .headerInnerContainer {
   display: flex;
   text-align: center;
-  width: 200px;
+  /* width: 200px; */
   padding: 20px 20px 0 20px;
 }
 
@@ -71,4 +73,22 @@
   margin: 1px;
   border: 1px solid white;
   background-color: white;
+}
+
+.App {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  padding: 0 60px;
+  background-color: black;
+  color: white;
+}
+.Title {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
 }
